<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.SettingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/welcome"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardAccount"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/placeholder"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="50dp"
            app:cardCornerRadius="15dp">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="200dp">
                <ImageView
                    android:background="@color/yellow"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_account_white"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/account_setting"
                android:layout_marginStart="70dp"
                android:layout_marginTop="15dp"/>
            <ImageView
                android:id="@+id/ivNavAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_next_yellow"
                android:layout_marginStart="380dp"
                android:layout_marginTop="13dp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardDelete"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/cardAccount"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="25dp"
            app:cardCornerRadius="15dp">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="200dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@color/yellow"
                    app:srcCompat="@drawable/ic_delete_white"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/delete_account"
                android:layout_marginStart="70dp"
                android:layout_marginTop="15dp"/>
            <ImageView
                android:id="@+id/ivNavDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_next_yellow"
                android:layout_marginStart="380dp"
                android:layout_marginTop="15dp"/>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardLanguage"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/cardDelete"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="25dp"
            app:cardCornerRadius="15dp">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="200dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@color/yellow"
                    app:srcCompat="@drawable/ic_setting"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/language_setting"
                android:layout_marginStart="70dp"
                android:layout_marginTop="15dp"/>
            <ImageView
                android:id="@+id/ivNavSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_next_yellow"
                android:layout_marginStart="380dp"
                android:layout_marginTop="15dp"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/cardLanguage"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/darkmode_setting"/>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton"
            android:layout_width="175dp"
            android:layout_height="57dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/tvLanguage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.452">

            <Button
                android:id="@+id/button_light"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light" />

            <Button
                android:id="@+id/button_dark"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/yellow"
                android:text="@string/dark"
                android:textColor="@color/white" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>